--- a/addons.html
+++ b/addons.html
@@ -369,8 +369,8 @@
       <!-- WeakAuras Section -->
       <div class="section-header">
         <h2>WeakAuras</h2>
-        <span class="section-count">14</span>
       </div>
+      <div class="items-grid" id="weakauras-grid"></div>
   </div>
 
   <script>
