--- a/addons.html
+++ b/addons.html
@@ -379,21 +379,18 @@
   <script>
     // Data
     const addons = [
-      { name: "AdvancedInterfaceOptions", url: "https://www.curseforge.com/wow/addons/advancedinterfaceoptions" },
       { name: "Plater Nameplates", url: "https://www.curseforge.com/wow/addons/plater-nameplates", profileUrl: "https://wago.io/pfxpBonVW", preview: "https://media.wago.io/screenshots/pfxpBonVW/674874e2db2a2863b9d60ecd.png" },
       { name: "Shadowed Unit Frames", url: "https://www.curseforge.com/wow/addons/shadowed-unit-frames/files/7062045", profileUrl: "https://wago.io/3K-eb06qt", preview: "https://media.wago.io/screenshots/3K-eb06qt/688e04f139d99bcfd0194af7.gif"},
-      { name: "TrufiGCD", url: "https://www.curseforge.com/wow/addons/trufigcd" },
-
     ];
 
     const weakauras = [
       { name: "Fojji - Shadow Priest UI [MoP] | skimmy edit", url: "https://wago.io/ri2lfOS8b", preview: "https://media.wago.io/screenshots/ri2lfOS8b/688dc81ab1debd7388acf2da.gif" },
       { name: "DragonKarsh CastBars | skimmy edit", url: "https://wago.io/dnDdk1mhh", preview: "https://media.wago.io/screenshots/dnDdk1mhh/688483a02acbf36327ec9c9e.gif" },
       { name: "Shadow Word: Death on Nameplates", url: "https://wago.io/UWa_HeEta", preview: "https://media.wago.io/screenshots/UWa_HeEta/68846df1a40570447822e19e.gif" },
-      { name: "Halo Range Checker", url: "https://wago.io/Zcbxhfgrl", preview: "https://media.wago.io/screenshots/Zcbxhfgrl/683b19f81cf76ccd508485fe.png" },
-      { name: "ModernCharacterFrame | Plaffs edition", url: "https://wago.io/mm6cuMmYc", preview: "https://media.wago.io/screenshots/mm6cuMmYc/665f6b5f9fda7c214b8d976d.png" },
       { name: "Haste Breakpoints (T14, T15)", url: "https://wago.io/7m5gdIAts", preview: "https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif" },
-      { name: "UVLS Tracker", url: "https://wago.io/8Xgm0DEZW", preview: "https://media.wago.io/screenshots/8Xgm0DEZW/69672ac8309543a4f7f46443.gif" }
+      { name: "UVLS Tracker", url: "https://wago.io/8Xgm0DEZW", preview: "https://media.wago.io/screenshots/8Xgm0DEZW/69672ac8309543a4f7f46443.gif" },
+      { name: "Halo Range Checker", url: "https://wago.io/Zcbxhfgrl", preview: "https://media.wago.io/screenshots/Zcbxhfgrl/683b19f81cf76ccd508485fe.png" },
+      { name: "ModernCharacterFrame | Plaffs edition", url: "https://wago.io/mm6cuMmYc", preview: "https://media.wago.io/screenshots/mm6cuMmYc/665f6b5f9fda7c214b8d976d.png" }
     ];
 
     // Render items
