--- a/addons.html
+++ b/addons.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
-  <title>Shadow Priest Addons & WeakAuras – MoP Classic</title>
+  <title>Shadow Priest Addons & WeakAuras | skimmynz</title>
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698535707794768"
      crossorigin="anonymous"></script>
