--- a/haste.html
+++ b/haste.html
@@ -879,7 +879,7 @@
                     <polyline points="7 10 12 15 17 10"/>
                     <line x1="12" y1="15" x2="12" y2="3"/>
                   </svg>
-                  Import Haste Breakpoint WA
+                  Import Haste Breakpoint
                 </a>
                 <p style="color: var(--text-muted); font-size: 0.75rem; text-align: center; margin: 0; line-height: 1.4;">
                   Track your haste breakpoints in real-time with this WeakAura
