--- a/haste.html
+++ b/haste.html
@@ -25,11 +25,13 @@
     /* Additional styles specific to haste calculator */
     .haste-container {
       padding: 2rem 2.5rem;
+	  max-width: 1600px;
+ 	  margin: 0 auto;
     }
 
     .haste-header {
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 3rem;
     }
 
     .haste-header h1 {
@@ -57,10 +59,11 @@
 
     .haste-main-content {
       display: grid;
-      grid-template-columns: 320px 1fr 320px;
+      grid-template-columns: 340px 1fr 340px;
       gap: 2rem;
       align-items: start;
       max-width: 100%;
+	  margin: 0 auto;
     }
 
     .haste-left-panel,
@@ -80,6 +83,7 @@
       position: relative;
       overflow: hidden;
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+	  padding: 1.75rem;
     }
 
     .input-card:hover,
@@ -572,7 +576,7 @@
 
     @media (max-width: 1400px) {
       .haste-main-content {
-        grid-template-columns: 280px 1fr 280px;
+        grid-template-columns: 300px 1fr 300px;
       }
     }
 
