--- a/haste.html
+++ b/haste.html
@@ -59,18 +59,24 @@
 
     .haste-main-content {
       display: grid;
-      grid-template-columns: 340px 1fr 340px;
+      grid-template-columns: 380px 1fr;
       gap: 2rem;
       align-items: start;
       max-width: 100%;
 	  margin: 0 auto;
     }
 
-    .haste-left-panel,
-    .haste-right-panel {
+    .haste-left-panel {
       display: flex;
       flex-direction: column;
       gap: 1.5rem;
+    }
+
+    .haste-right-panel {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1.5rem;
+      grid-template-rows: auto;
     }
 
     .input-card,
@@ -377,6 +383,7 @@
     .haste-center-panel {
       min-height: 0;
       overflow: hidden;
+      grid-column: 1 / -1;
     }
 
     .spells-table {
@@ -574,9 +581,13 @@
       box-shadow: 0 6px 16px var(--accent-glow);
     }
 
+    .settings-card.weakaura-card {
+      grid-column: 1 / -1;
+    }
+
     @media (max-width: 1400px) {
       .haste-main-content {
-        grid-template-columns: 300px 1fr 300px;
+        grid-template-columns: 340px 1fr;
       }
     }
 
@@ -586,10 +597,8 @@
         gap: 1.5rem;
       }
 
-      .haste-left-panel,
       .haste-right-panel {
-        flex-direction: row;
-        gap: 1rem;
+        grid-template-columns: 1fr 1fr;
       }
 
       .input-card,
@@ -612,9 +621,8 @@
         font-size: 0.9rem;
       }
 
-      .haste-left-panel,
       .haste-right-panel {
-        flex-direction: column;
+        grid-template-columns: 1fr;
       }
 
       .input-row {
@@ -752,16 +760,6 @@
           </div>
         </div>
 
-        <!-- CENTER PANEL: DoT Breakpoint Analysis -->
-        <div class="haste-center-panel">
-          <div class="spells-table">
-            <div class="table-header">
-              <h2 class="table-title">DoT Breakpoint Analysis</h2>
-            </div>
-            <div class="spells-container" id="spellsContainer"></div>
-          </div>
-        </div>
-
         <!-- RIGHT PANEL: Race & Buffs -->
         <div class="haste-right-panel">
           <div class="settings-card">
@@ -818,7 +816,7 @@
                   <img src="https://wow.zamimg.com/images/wow/icons/large/spell_holy_powerinfusion.jpg" alt="Power Infusion" class="buff-icon">
                   <div class="buff-info">
                     <span class="buff-name">Power Infusion</span>
-                    <span class="buff-description">+20% spell haste</span>
+					<span class="buff-description">+20% spell haste</span>
                   </div>
                 </label>
 
@@ -855,7 +853,7 @@
             </div>
           </div>
 
-          <div class="settings-card">
+          <div class="settings-card weakaura-card">
             <div class="race-selection">
               <div class="buffs-header">Import WeakAura</div>
               <div style="display: flex; flex-direction: column; gap: 1rem; align-items: center;">
@@ -880,6 +878,16 @@
                 </p>
               </div>
             </div>
+          </div>
+        </div>
+
+        <!-- CENTER PANEL: DoT Breakpoint Analysis -->
+        <div class="haste-center-panel">
+          <div class="spells-table">
+            <div class="table-header">
+              <h2 class="table-title">DoT Breakpoint Analysis</h2>
+            </div>
+            <div class="spells-container" id="spellsContainer"></div>
           </div>
         </div>
       </div>
@@ -1214,7 +1222,7 @@ hasteInput.addEventListener('keydown', function(e) {
     }
     
     // Check if text is selected
-    const hasSelection = this.selectionStart !== this.selselectionEnd;
+    const hasSelection = this.selectionStart !== this.selectionEnd;
     
     // Prevent input if already at 5 digits and no text is selected
     if (this.value.length >= 5 && !hasSelection) {
