--- a/haste.html
+++ b/haste.html
@@ -57,14 +57,15 @@
       line-height: 1.6;
     }
 
-    .haste-main-content {
-      display: grid;
-      grid-template-columns: 380px 1fr;
-      gap: 2rem;
-      align-items: start;
-      max-width: 100%;
+	.haste-main-content {
+	  display: grid;
+	  grid-template-columns: 380px 1fr;
+	  grid-template-rows: auto 1fr;
+	  gap: 2rem;
+	  align-items: start;
+	  max-width: 100%;
 	  margin: 0 auto;
-    }
+	}
 
     .haste-left-panel {
       display: flex;
