--- a/haste.html
+++ b/haste.html
@@ -57,27 +57,20 @@
       line-height: 1.6;
     }
 
-	.haste-main-content {
-	  display: grid;
-	  grid-template-columns: 380px 1fr;
-	  grid-template-rows: auto 1fr;
-	  gap: 2rem;
-	  align-items: start;
-	  max-width: 100%;
+    .haste-main-content {
+      display: grid;
+      grid-template-columns: 340px 1fr 340px;
+      gap: 2rem;
+      align-items: start;
+      max-width: 100%;
 	  margin: 0 auto;
-	}
+    }
 
-    .haste-left-panel {
+    .haste-left-panel,
+    .haste-right-panel {
       display: flex;
       flex-direction: column;
       gap: 1.5rem;
-    }
-
-    .haste-right-panel {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 1.5rem;
-      grid-template-rows: auto;
     }
 
     .input-card,
@@ -384,7 +377,6 @@
     .haste-center-panel {
       min-height: 0;
       overflow: hidden;
-      grid-column: 1 / -1;
     }
 
     .spells-table {
@@ -582,13 +574,9 @@
       box-shadow: 0 6px 16px var(--accent-glow);
     }
 
-    .settings-card.weakaura-card {
-      grid-column: 1 / -1;
-    }
-
     @media (max-width: 1400px) {
       .haste-main-content {
-        grid-template-columns: 340px 1fr;
+        grid-template-columns: 300px 1fr 300px;
       }
     }
 
@@ -598,8 +586,10 @@
         gap: 1.5rem;
       }
 
+      .haste-left-panel,
       .haste-right-panel {
-        grid-template-columns: 1fr 1fr;
+        flex-direction: row;
+        gap: 1rem;
       }
 
       .input-card,
@@ -622,8 +612,9 @@
         font-size: 0.9rem;
       }
 
+      .haste-left-panel,
       .haste-right-panel {
-        grid-template-columns: 1fr;
+        flex-direction: column;
       }
 
       .input-row {
@@ -761,6 +752,16 @@
           </div>
         </div>
 
+        <!-- CENTER PANEL: DoT Breakpoint Analysis -->
+        <div class="haste-center-panel">
+          <div class="spells-table">
+            <div class="table-header">
+              <h2 class="table-title">DoT Breakpoint Analysis</h2>
+            </div>
+            <div class="spells-container" id="spellsContainer"></div>
+          </div>
+        </div>
+
         <!-- RIGHT PANEL: Race & Buffs -->
         <div class="haste-right-panel">
           <div class="settings-card">
@@ -817,7 +818,7 @@
                   <img src="https://wow.zamimg.com/images/wow/icons/large/spell_holy_powerinfusion.jpg" alt="Power Infusion" class="buff-icon">
                   <div class="buff-info">
                     <span class="buff-name">Power Infusion</span>
-					<span class="buff-description">+20% spell haste</span>
+                    <span class="buff-description">+20% spell haste</span>
                   </div>
                 </label>
 
@@ -854,7 +855,7 @@
             </div>
           </div>
 
-          <div class="settings-card weakaura-card">
+          <div class="settings-card">
             <div class="race-selection">
               <div class="buffs-header">Import WeakAura</div>
               <div style="display: flex; flex-direction: column; gap: 1rem; align-items: center;">
@@ -879,16 +880,6 @@
                 </p>
               </div>
             </div>
-          </div>
-        </div>
-
-        <!-- CENTER PANEL: DoT Breakpoint Analysis -->
-        <div class="haste-center-panel">
-          <div class="spells-table">
-            <div class="table-header">
-              <h2 class="table-title">DoT Breakpoint Analysis</h2>
-            </div>
-            <div class="spells-container" id="spellsContainer"></div>
           </div>
         </div>
       </div>
@@ -1223,7 +1214,7 @@ hasteInput.addEventListener('keydown', function(e) {
     }
     
     // Check if text is selected
-    const hasSelection = this.selectionStart !== this.selectionEnd;
+    const hasSelection = this.selectionStart !== this.selselectionEnd;
     
     // Prevent input if already at 5 digits and no text is selected
     if (this.value.length >= 5 && !hasSelection) {
