--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/16.png">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-  
+
+  <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -112,7 +113,7 @@
       </aside>
     </div>
   </div>
-  
+  <script src="js/nav.js"></script>
   <script src="script.js" defer></script>
 </body>
 </html>
