--- a/haste.html
+++ b/haste.html
@@ -14,6 +14,7 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
+  <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -886,30 +887,6 @@
     </div>
   </div>
 
-  <script>
-    // Mobile menu toggle
-    const mobileMenuToggle = document.getElementById('mobileMenuToggle');
-    const navLinks = document.getElementById('navLinks');
-	if (mobileMenuToggle && navLinks) {
-	mobileMenuToggle.addEventListener('click', () => {
-	navLinks.classList.toggle('mobile-open');
-	mobileMenuToggle.textContent = navLinks.classList.contains('mobile-open') ? '✕' : '☰';
-	});
-  navLinks.querySelectorAll('a').forEach(link => {
-    link.addEventListener('click', () => {
-      navLinks.classList.remove('mobile-open');
-      mobileMenuToggle.textContent = '☰';
-    });
-  });
-
-  document.addEventListener('click', (e) => {
-    if (!e.target.closest('.top-nav')) {
-      navLinks.classList.remove('mobile-open');
-      mobileMenuToggle.textContent = '☰';
-    }
-  });
-}
-
 // MoP Classic spell data
 const breakpoints = {
   normal: {
@@ -1239,5 +1216,6 @@ hasteInput.addEventListener('focus', function() {
 // Initialize on load
 calculateHaste();
   </script>
+<script src="js/nav.js"></script>
 </body>
 </html>
