--- a/addons.html
+++ b/addons.html
@@ -11,6 +11,7 @@
   
   <link rel="icon" type="image/png" sizes="32x32" href="/32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/16.png">
+  <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -436,30 +437,7 @@
     renderItems(addons, 'addons-grid');
     renderItems(weakauras, 'weakauras-grid');
 
-    // Mobile menu toggle
-    const mobileMenuToggle = document.getElementById('mobileMenuToggle');
-    const navLinks = document.getElementById('navLinks');
-
-    if (mobileMenuToggle && navLinks) {
-      mobileMenuToggle.addEventListener('click', () => {
-        navLinks.classList.toggle('mobile-open');
-        mobileMenuToggle.textContent = navLinks.classList.contains('mobile-open') ? '✕' : '☰';
-      });
-
-      navLinks.querySelectorAll('a').forEach(link => {
-        link.addEventListener('click', () => {
-          navLinks.classList.remove('mobile-open');
-          mobileMenuToggle.textContent = '☰';
-        });
-      });
-
-      document.addEventListener('click', (e) => {
-        if (!e.target.closest('.top-nav')) {
-          navLinks.classList.remove('mobile-open');
-          mobileMenuToggle.textContent = '☰';
-        }
-      });
-    }
   </script>
+<script src="js/nav.js"></script>
 </body>
 </html>
