--- a/haste.html
+++ b/haste.html
@@ -24,15 +24,19 @@
 
   <style>
     /* Additional styles specific to haste calculator */
+    html {
+      scroll-behavior: smooth;
+    }
+
     .haste-container {
       padding: 2rem 2.5rem;
-	  max-width: 1600px;
- 	  margin: 0 auto;
+      max-width: 1600px;
+      margin: 0 auto;
     }
 
     .haste-header {
       text-align: center;
-      margin-bottom: 3rem;
+      margin-bottom: 2.5rem;
     }
 
     .haste-header h1 {
@@ -54,17 +58,51 @@
       font-weight: 400;
       opacity: 0.9;
       max-width: 700px;
-      margin: 0 auto;
+      margin: 0 auto 1.5rem;
       line-height: 1.6;
+    }
+
+    .ui-settings {
+      display: flex;
+      justify-content: center;
+      gap: 3rem;
+      flex-wrap: wrap;
+      padding: 1rem;
+      background: rgba(255, 255, 255, 0.02);
+      border-radius: 12px;
+      border: 1px solid var(--border-color);
+      max-width: 500px;
+      margin: 0 auto;
+    }
+
+    .ui-setting {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.375rem;
+    }
+
+    .ui-setting-label {
+      color: var(--text-muted);
+      font-size: 0.7rem;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+    }
+
+    .ui-setting-value {
+      color: var(--accent-color);
+      font-size: 1.125rem;
+      font-weight: 700;
     }
 
     .haste-main-content {
       display: grid;
-      grid-template-columns: 340px 1fr 340px;
-      gap: 2rem;
+      grid-template-columns: minmax(320px, 360px) 1fr minmax(320px, 380px);
+      gap: 1.5rem;
       align-items: start;
       max-width: 100%;
-	  margin: 0 auto;
+      margin: 0 auto;
     }
 
     .haste-left-panel,
@@ -72,6 +110,13 @@
       display: flex;
       flex-direction: column;
       gap: 1.5rem;
+    }
+
+    .haste-left-panel {
+      position: sticky;
+      top: 80px;
+      align-self: start;
+      max-height: calc(100vh - 100px);
     }
 
     .input-card,
@@ -84,7 +129,7 @@
       position: relative;
       overflow: hidden;
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-	  padding: 1.75rem;
+      padding: 1.75rem;
     }
 
     .input-card:hover,
@@ -92,6 +137,7 @@
     .settings-card:hover {
       border-color: var(--border-hover);
       box-shadow: 0 12px 32px rgba(0, 0, 0, 0.4);
+      transform: translateY(-1px);
     }
 
     .input-card::before,
@@ -102,15 +148,9 @@
       top: 0;
       left: 0;
       right: 0;
-      height: 2px;
+      height: 3px;
       background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
-      opacity: 0.8;
-    }
-
-    .input-card,
-    .result-card,
-    .settings-card {
-      padding: 2rem;
+      opacity: 0.9;
     }
 
     .input-section {
@@ -161,8 +201,8 @@
 
     .haste-input {
       width: 100%;
-      padding: 0.875rem 1rem;
-      font-size: 1.125rem;
+      padding: 1rem 1.25rem;
+      font-size: 1.25rem;
       font-weight: 700;
       font-family: inherit;
       background: var(--card-bg);
@@ -184,11 +224,12 @@
 
     .haste-input:focus {
       border-color: var(--accent-color);
-      box-shadow: 0 0 0 3px var(--accent-glow);
+      box-shadow: 0 0 0 4px var(--accent-glow);
       transform: translateY(-1px);
+      background: rgba(26, 29, 41, 0.8);
     }
 
-    .haste-input:hover {
+    .haste-input:hover:not(:focus) {
       border-color: var(--border-hover);
     }
 
@@ -212,7 +253,9 @@
       text-transform: uppercase;
       letter-spacing: 1.5px;
       text-align: center;
-      margin-bottom: 0.25rem;
+      margin-bottom: 0.5rem;
+      padding-bottom: 0.5rem;
+      border-bottom: 2px solid rgba(124, 58, 237, 0.2);
     }
 
     .buffs-grid {
@@ -335,33 +378,40 @@
 
     .result-card {
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 160px;
     }
 
     .result-label {
       color: var(--text-accent);
       font-size: 0.75rem;
       font-weight: 700;
-      margin-bottom: 0.75rem;
+      margin-bottom: 0.875rem;
       text-transform: uppercase;
       letter-spacing: 1.5px;
     }
 
     .result-value {
-      font-size: 2.25rem;
+      font-size: 2.5rem;
       font-weight: 900;
       background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
-      margin-bottom: 0.75rem;
+      margin-bottom: 0.875rem;
       line-height: 1;
+      transition: all 0.3s ease;
     }
 
     .conversion-text {
       color: var(--text-muted);
-      font-size: 0.85rem;
+      font-size: 0.875rem;
       font-weight: 500;
       line-height: 1.4;
+      min-height: 1.5rem;
     }
 
     .gcd-warning {
@@ -409,7 +459,7 @@
 
     .table-header {
       background: rgba(255, 255, 255, 0.02);
-      padding: 1.5rem 2rem;
+      padding: 1.25rem 1.75rem;
       border-bottom: 1px solid var(--border-color);
       position: relative;
     }
@@ -435,11 +485,11 @@
       display: grid;
       grid-template-columns: 1fr auto auto;
       align-items: center;
-      padding: 1.5rem 2rem;
+      padding: 1.25rem 1.75rem;
       border-bottom: 1px solid var(--border-color);
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       position: relative;
-      gap: 1rem;
+      gap: 1.25rem;
     }
 
     .spell-row:last-child {
@@ -458,18 +508,19 @@
     }
 
     .spell-icon {
-      width: 40px;
-      height: 40px;
+      width: 44px;
+      height: 44px;
       border-radius: 10px;
       border: 2px solid var(--border-color);
       object-fit: cover;
       transition: all 0.3s ease;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+      flex-shrink: 0;
     }
 
     .spell-icon:hover {
       border-color: var(--accent-color);
-      transform: scale(1.1);
+      transform: scale(1.08);
       box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
     }
 
@@ -490,16 +541,18 @@
       padding: 0.5rem 1rem;
       border-radius: 20px;
       font-weight: 800;
-      font-size: 0.8rem;
-      min-width: 75px;
+      font-size: 0.8125rem;
+      min-width: 80px;
       text-align: center;
       transition: all 0.3s ease;
       border: 2px solid transparent;
+      white-space: nowrap;
     }
 
     .ticks-badge.no-ticks {
       background: var(--border-color);
       color: var(--text-muted);
+      opacity: 0.8;
     }
 
     .ticks-badge.has-ticks {
@@ -507,6 +560,7 @@
       color: white;
       box-shadow: 0 0 20px var(--success-glow);
       animation: pulse-glow 3s ease-in-out infinite;
+      border-color: rgba(16, 185, 129, 0.5);
     }
 
     @keyframes pulse-glow {
@@ -523,28 +577,30 @@
       text-align: right;
       display: flex;
       flex-direction: column;
-      gap: 0.5rem;
+      gap: 0.625rem;
       align-items: flex-end;
-      min-width: 140px;
+      min-width: 160px;
     }
 
     .breakpoint-text {
       color: var(--text-secondary);
-      font-size: 0.8rem;
+      font-size: 0.8125rem;
       font-weight: 600;
       margin: 0;
       line-height: 1.3;
+      white-space: nowrap;
     }
 
     .breakpoint-maxed {
       color: var(--success-color);
       font-weight: 800;
-      font-size: 0.9rem;
+      font-size: 0.9375rem;
       text-shadow: 0 0 10px var(--success-glow);
+      letter-spacing: 0.025em;
     }
 
     .progress-container {
-      width: 140px;
+      width: 160px;
       height: 8px;
       background: var(--card-bg);
       border-radius: 4px;
@@ -563,10 +619,20 @@
       position: relative;
     }
 
+    .settings-card a[href*="wago.io"] img {
+      transition: all 0.3s ease;
+      display: block;
+      width: 100%;
+    }
+
     .settings-card a[href*="wago.io"] img:hover {
       border-color: var(--accent-color);
       transform: scale(1.02);
       box-shadow: 0 4px 16px rgba(124, 58, 237, 0.4);
+    }
+
+    .settings-card a[href*="wago.io"]:last-of-type {
+      transition: all 0.3s ease;
     }
 
     .settings-card a[href*="wago.io"]:last-of-type:hover {
@@ -575,9 +641,18 @@
       box-shadow: 0 6px 16px var(--accent-glow);
     }
 
+    .haste-right-panel > .settings-card:not(:last-child) {
+      margin-bottom: 0;
+    }
+
     @media (max-width: 1400px) {
       .haste-main-content {
-        grid-template-columns: 300px 1fr 300px;
+        grid-template-columns: minmax(300px, 320px) 1fr minmax(300px, 340px);
+        gap: 1.25rem;
+      }
+
+      .haste-container {
+        padding: 2rem 1.75rem;
       }
     }
 
@@ -587,16 +662,29 @@
         gap: 1.5rem;
       }
 
-      .haste-left-panel,
-      .haste-right-panel {
+      .haste-left-panel {
+        position: relative;
+        top: 0;
+        max-height: none;
         flex-direction: row;
         gap: 1rem;
       }
 
+      .haste-right-panel {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 1rem;
+      }
+
       .input-card,
-      .result-card,
-      .settings-card {
+      .result-card {
         flex: 1;
+      }
+    }
+
+    @media (max-width: 900px) {
+      .haste-right-panel {
+        grid-template-columns: 1fr;
       }
     }
 
@@ -605,17 +693,34 @@
         padding: 1.5rem 1rem;
       }
 
+      .haste-header {
+        margin-bottom: 2rem;
+      }
+
       .haste-header h1 {
         font-size: 1.75rem;
       }
 
       .haste-header p {
         font-size: 0.9rem;
+        margin-bottom: 1.25rem;
       }
 
-      .haste-left-panel,
-      .haste-right-panel {
+      .ui-settings {
+        gap: 2rem;
+        padding: 0.875rem;
+      }
+
+      .ui-setting-value {
+        font-size: 1rem;
+      }
+
+      .haste-left-panel {
         flex-direction: column;
+      }
+
+      .haste-right-panel {
+        grid-template-columns: 1fr;
       }
 
       .input-row {
@@ -633,7 +738,7 @@
         grid-template-columns: 1fr;
         gap: 1rem;
         text-align: center;
-        padding: 1.25rem 1.5rem;
+        padding: 1.25rem 1.25rem;
       }
 
       .spell-info {
@@ -647,7 +752,24 @@
       }
 
       .progress-container {
-        width: 120px;
+        width: 160px;
+      }
+
+      .table-header {
+        padding: 1rem 1.25rem;
+      }
+
+      .table-title {
+        font-size: 1.125rem;
+      }
+
+      .spell-icon {
+        width: 40px;
+        height: 40px;
+      }
+
+      .breakpoint-info {
+        min-width: 140px;
       }
     }
   </style>
@@ -720,6 +842,17 @@
       <div class="haste-header">
         <h1>Shadow Priest Haste Calculator</h1>
         <p>Optimize your DoT breakpoints and maximize your damage potential in Mists of Pandaria Classic</p>
+
+        <div class="ui-settings">
+          <div class="ui-setting">
+            <div class="ui-setting-label">Resolution</div>
+            <div class="ui-setting-value">1920 × 1080</div>
+          </div>
+          <div class="ui-setting">
+            <div class="ui-setting-label">UI Scale</div>
+            <div class="ui-setting-value">65%</div>
+          </div>
+        </div>
       </div>
 
       <div class="haste-main-content">
