--- a/haste.html
+++ b/haste.html
@@ -21,7 +21,7 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="haste.css" />
+  <link rel="stylesheet" href="css/haste.css" />
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
